chore: clean up codebase, fix tests and add documentation
